# zap

./: .gitattributes  .gitignore  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  Doxygen  Doxygen.in  GEMINI.md  README.md  ROADMAP.md  SECURITY.md  annotated.html  annotated_dup.js  build.sh  classes.html  dir_203e5988f1ed315d29383d699972de6f.html  dir_203e5988f1ed315d29383d699972de6f.js  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_46354631072136ba50f9f8bd6a895813.html  dir_46354631072136ba50f9f8bd6a895813.js  dir_4db3a2f7aa3a8b9901e70dfeb2571af9.html  dir_4db3a2f7aa3a8b9901e70dfeb2571af9.js  dir_64a2fc46d0d41bc8a4d0616660b79740.html  dir_64a2fc46d0d41bc8a4d0616660b79740.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6cd8491d143eb218b70983dbdb3c58bc.js  dir_7cf1b5e32c0ccac638cac1ebc38d93b6.html  dir_7cf1b5e32c0ccac638cac1ebc38d93b6.js  dir_811ae44bc84f1c9183c1d97a549681dc.html  dir_811ae44bc84f1c9183c1d97a549681dc.js  dir_8509b06bafa958d2011203a730bf5778.html  dir_8509b06bafa958d2011203a730bf5778.js  dir_86f1dd032fb9207ef9ae8384dec57402.html  dir_86f1dd032fb9207ef9ae8384dec57402.js  dir_b3189eee746b15ed65e0c03d73516243.html  dir_b753fe545b1e49af3af431b2cda9af92.html  dir_bf9f26469d00835ba20ff8d80ee5a804.html  dir_bf9f26469d00835ba20ff8d80ee5a804.js  (+199 more)
.githooks/: pre-commit
.github/: CODEOWNERS
ast/: array_literal.hpp  assign_node.hpp  bin_expr.hpp  body_node.hpp  break_node.hpp  continue_node.hpp  enum_decl.hpp  expr_node.hpp  fun_call.hpp  fun_decl.hpp  if_node.hpp  import_node.hpp  node.hpp  nodes.hpp  parameter_node.hpp  record_decl.hpp  return_node.hpp  root_node.hpp  statement_node.hpp  top_level.hpp  type_node.hpp  unary_expr.hpp  var_decl.hpp  visitor.hpp  while_node.hpp
cmake/: doxygen.cmake
codegen/: llvm_codegen.cpp  llvm_codegen.hpp
compiler/: ast_to_ir.cpp  ast_to_ir.hpp  codegen.cpp  codegen.hpp
core/: core.zp
docs/: README.md  control_flow.md  data_structures.md  functions.md  variables.md
example/: add.zap  array.zap  array2.zap  array_stats.zp  enums.zap  error.zap  ext.zap  game_guess_number_1_100.zp  game_guess_secret.zp  game_rps.zp  game_score_save.zp  grade  grade.zap  if_expr.zap  inline_asm.zp  input  input.zp  main.ll  main.zap  multi_arg.zap  ref_counter.zp  simple_app.zap  std_collection_list.zp  std_error.zp  std_fs_path.zp  std_process.zp  std_random.zp  std_showcase.zp  struct_enum_state.zp  test.zap  test_while.zap  type_errors.zap  unsafe_heap_alloc.zp  unsafe_mem_resize.zp  unsafe_stack_pointer.zp  unsafe_struct_pointer_field.zp  varargs.zp  while.zap  while_paren.zap
ir/: basic_block.hpp  function.hpp  instruction.hpp  ir.cpp  ir.hpp  ir_generator.cpp  ir_generator.hpp  module.hpp  type.hpp  value.hpp
lexer/: lexer.cpp  lexer.hpp
parser/: ast_builder.hpp  parser.cpp  parser.hpp
sema/: binder.cpp  binder.hpp  bound_nodes.hpp  sema.hpp  symbol.hpp  symbol_table.hpp
src/: main.cpp  stdlib.c  visibility.hpp
src/lsp/: CMakeLists.txt  README.md  language_features.cpp  language_features.hpp  lsp-main.cpp  lsp.cpp  lsp.hpp  protocol_messages.cpp  protocol_messages.hpp  protocol_utils.cpp  protocol_utils.hpp  symbol_index.cpp  symbol_index.hpp  workspace.cpp  workspace.hpp  workspace_types.hpp
src/lsp/nvim/: README.md  install-init.lua.sh  install-lazy.sh  lazy.lua  zap.lua
src/lsp/nvim/ftdetect/: zap.vim
src/lsp/nvim/lua/zap_nvim/: config.lua
src/lsp/nvim/plugin/: zap.lua
src/lsp/nvim/syntax/: zap.vim
src/lsp/vscode/zap/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package.json  tsconfig.json
src/lsp/vscode/zap/scripts/: package-vsix.js
src/lsp/vscode/zap/src/: extension.ts
src/lsp/vscode/zap/stdlib/: collection.zp  error.zp  fs.zp  io.zp  math.zp  network.zp  path.zp  prelude.zp  process.zp  random.zp  string.zp
src/lsp/vscode/zap/syntaxes/: zap.tmLanguage.json
std/: collection.zp  convert.zp  fs.zp  io.zp  json.zp  mem.zp  network.zp  path.zp  prelude.zap  prelude.zp  process.zap  random.zp  string.zap  string.zp  strings.zp
tests/: array_const_size.zap  array_const_size.zp  array_dynamic_index_test.zp  asm_output_not_lvalue_error.zp  asm_outside_unsafe_error.zp  attribute_packed_args_error.zp  attribute_packed_duplicate_error.zp  attribute_packed_on_enum_error.zp  attribute_packed_on_fun_error.zp  break.zap  break_outside.zap  class_arc_print_demo.zp  class_constructor_inheritance_test.zp  class_constructor_overload_test.zp  class_forward_weak_ref_test.zp  class_method_overload_test.zp  class_pointer_field_private_error.zp  class_pointer_field_test.zp  class_test.zir  class_unsafe_inheritance_test.zp  class_unsafe_method_scope_error.zp  class_unsafe_method_test.zp  class_unsafe_static_method_scope_error.zp  class_unsafe_static_method_test.zp  compound_assign_eval_once_test.zp  compound_assign_test.zp  concat.zap  concat.zp  concat_char.zap  concat_char.zp  concat_vars.zap  concat_vars.zp  continue.zap  continue_outside.zap  control_flow.zap  core_implicit_disabled_error.zp  core_nostdlib_test.zp  enum_assigned_invalid_value_error.zp  (+149 more)
token/: token.hpp
(+1099 files in other folders)
